<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bgGray"
    android:layout_height="match_parent">
    <tohope.app.yuedan.customview.MyTitleBar
        android:id="@+id/my_PublishSkill_titie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bg="@color/titleRed"
        app:imgLeft="@mipmap/back"
        app:textMid="@string/publish_skill" />
    <ScrollView
        android:layout_width="wrap_content"
        android:scrollbars="none"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimens_5"
        android:layout_marginRight="@dimen/dimens_5"
        android:orientation="vertical"
        >
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/dimens_10"
        android:layout_marginBottom="@dimen/dimens_10"
        android:paddingBottom="@dimen/dimens_5"
        android:paddingLeft="@dimen/dimens_5"
        android:paddingRight="@dimen/dimens_20"
        android:lineSpacingExtra="@dimen/dimens_5"
        android:textSize="@dimen/text12"
        android:text="@string/skill_describe"
        />
        <LinearLayout
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimens_10"
            >
        <TextView
            android:id="@+id/tv_PublishSkill_class"
            style="@style/PublishSkill_text"
            android:text="@string/skill_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_PublishSkill_style"
                style="@style/PublishSkill_text"
                android:text="@string/skill_style"
             />
            <tohope.app.yuedan.customview.NoScrollGridView
                android:id="@+id/ngv_PublishSkill_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="@dimen/dimens_10"
                android:layout_marginBottom="@dimen/dimens_10"
                android:numColumns="3"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_PublishSkill_service"
                style="@style/PublishSkill_text"
                android:text="@string/skill_service" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <tohope.app.yuedan.customview.NoScrollGridView
                    android:id="@+id/ngv_PublishSkill_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:verticalSpacing="@dimen/dimens_10"
                    android:layout_marginBottom="@dimen/dimens_10"
                    android:numColumns="4"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_marginBottom="@dimen/dimens_10"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_Skill_demandorder"
                        style="@style/TV_PublishSkill_serviceorange"
                        android:text="@string/skill_service_describe"
                        />
                    <TextView
                        android:id="@+id/tv_Skill_phoneorder"
                        style="@style/TV_PublishSkill_serviceorange"
                        android:text="@string/skill_service_phone"
                        />
                    <TextView
                        android:id="@+id/tv_Skill_videoorder"
                        style="@style/TV_PublishSkill_serviceorange"
                        android:text="@string/skill_service_viveo"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_skill_line_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:gravity="center_vertical"
                            >
                            <TextView
                              style="@style/TV_publishSkill_servicename"
                                android:text="@string/skill_line"
                                />
                            <EditText
                                android:id="@+id/et_skill_line_input"
                                style="@style/ET_publishSkill_price"
                                 />
                            <TextView
                                style="@style/TV_publishSkill_price"
                                android:text="@string/pricehour"
                                />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/tv_Skill_lineprice"
                            style="@style/TV_PublishSkill_serviceorange"
                            android:text="其他服务者所报均价：51.00元/次"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_skill_phone_input"
                            android:layout_width="wrap_content"
                            android:visibility="gone"

                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            >
                            <TextView
                                style="@style/TV_publishSkill_servicename"
                                android:text="@string/skill_phone"
                                />
                            <EditText
                                android:layout_marginLeft="@dimen/dimens_10"
                                style="@style/ET_publishSkill_price"
                                />
                        <TextView
                            style="@style/TV_publishSkill_price"
                            android:text="@string/pricehour"
                            />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/tv_Skill_phoneprice"
                            style="@style/TV_PublishSkill_serviceorange"
                            android:text="其他服务者所报均价：51.00元/次"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_skill_video_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"

                            android:gravity="center_vertical"
                            >
                            <TextView
                                style="@style/TV_publishSkill_servicename"
                                android:text="@string/skill_viveo"
                                />
                            <EditText
                                android:id="@+id/et_skill_video_input"
                                style="@style/ET_publishSkill_price"
                                />
                            <TextView
                                style="@style/TV_publishSkill_price"
                                android:text="@string/pricehour"
                                />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/tv_Skill_videoprice"
                            style="@style/TV_PublishSkill_serviceorange"
                            android:text="其他服务者所报均价：51.00元/次"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_skill_long_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:gravity="center_vertical"
                            >
                            <TextView
                                style="@style/TV_publishSkill_servicename"
                                android:text="@string/skill_long"
                                />
                            <EditText
                                android:id="@+id/ed_skill_long_input"
                                style="@style/ET_publishSkill_price"
                                />
                            <TextView
                               style="@style/TV_publishSkill_price"
                                android:text="@string/pricehour"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_height="wrap_content">
            <TextView
                style="@style/PublishSkill_text"
                android:text="@string/skill_time"
             />
            <tohope.app.yuedan.customview.NoScrollGridView
                android:id="@+id/ngv_PublishSkill_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="@dimen/dimens_10"
                android:layout_marginBottom="@dimen/dimens_10"
                android:numColumns="3"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_height="wrap_content">
            <TextView
                style="@style/PublishSkill_text"
                android:text="@string/business_introduction"
               />
            <EditText
                android:id="@+id/et_Skill_business_introduction"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:gravity="left|top"
                android:layout_marginLeft="@dimen/dimens_10"
                android:layout_marginRight="@dimen/dimens_10"
                android:layout_marginBottom="@dimen/dimens_10"
                android:background="@drawable/bg_input_gray"
                android:layout_height="@dimen/dimens_80" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_height="wrap_content">
            <TextView
                style="@style/PublishSkill_text"
                android:text="@string/upload_photos"
                android:textSize="@dimen/dimens_10"
                android:textColor="@color/textDarkGray"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
          <GridView
              android:id="@+id/gv_skill_uploadphotos"
              android:numColumns="4"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"></GridView>

        </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimens_40"
           android:layout_marginLeft="@dimen/dimens_20"
           android:layout_marginRight="@dimen/dimens_20"
           android:layout_marginTop="@dimen/dimens_10"
           android:layout_marginBottom="@dimen/dimens_20"
           android:background="@drawable/bg_tvlogin"
           android:gravity="center"
           android:text="@string/complete_publish"
           android:textColor="@color/white"
           android:textSize="@dimen/text16" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>